--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,6 +29,20 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f-1</h2>
+			<p><small>28. September 2020</small></p>
+			
+			<ul>
+				<li>Es wurden Gehäuse und Armbänder, die mit der Apple Watch Series 6 nach Apple's September 2020 Special Event eingeführt wurden, hinzugefügt. Damit sind es jetzt insgesamt 13 Gehäuse und 121 unterschiedliche Armbänder.</li>
+				<li>Dank der Umwandlung in HEIC wurde die Paketgröße um etwa 50% reduziert. Die Qualität mag zwar etwas gelitten haben, aber sie ist dennoch akzeptabel.</li>
+				<li>Performance der Gehäuse-/Armband-Auswahl verbessert.</li>
+				<li>Verbessert die Kompatibilität mit HSWidgets (Uhrzeit & Datum).</li>
+				<li>Wenn ein Apple Watch-Gehäuse angezeigt wird, ist die Interaktion nur innerhalb des Gehäuses möglich.</li>
+				<li>Der Zusatz „Beta“ wurde aus dem Paketnamen entfernt. Und ja, das ist einen einzlnen Punkt wert, da das so nicht beabsichtigt war.</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0f</h2>
 			<p><small>15. September 2020</small></p>
 			
@@ -222,7 +236,7 @@
 			<ul>
 				<li>Mit dem iOS 13 SDK von Grund auf neu entwickelt. Das bedeutet ebenfalls, dass jetzt alle Geräte mit A12 Prozessor oder neuer unterstützt werden. Eigentlich.</li>
 				<li>Stromverbauch drastisch reduziert.</li>
-				<li>Einstellungen: Ausgewählte Zifferblätter werden nicht länger zuruückgesetzt. Außerdem kann man nun auswählen, welche Apple Watch simuliert werden soll, sofern überhaupt eine simuliert werden soll.</li>
+				<li>Einstellungen: Ausgewählte Zifferblätter werden nicht länger zurückgesetzt. Außerdem kann man nun auswählen, welche Apple Watch simuliert werden soll, sofern überhaupt eine simuliert werden soll.</li>
 				<li>Zifferblatt-Verwaltung: Füge neue Zifferblätter hinzu, ändere ihre Reihenfolge oder lösche sie, direkt vom Sperrbildschirm aus. Außerdem können die Zifferblätter jetzt auf Werkseinstellungen zurückgesetzt werden.</li>
 				<li>Anpassen: Passe jedes unterstützte Zifferblatt nach deinem Geschmack an. Direkt vom Sperrbildschirm aus.</li>
 				<li>„Watch“-Integration (exklusiv für iPhone): Synchronisiere die Zifferblätter und ihre Anpassungen auf dem Sperrbildschirm mit denen auf deiner Uhr. Oder füge ein neues Zifferblatt vom Tab „Zifferblätter“ hinzu.</li>
