--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,8 +29,22 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f-1</h2>
+			<p><small>September 28, 2020</small></p>
+			
+			<ul>
+				<li>Added cases and bands introduced with Apple Watch Series 6 after Apple's September 2020 Special Event, which now results in a total of 13 cases and 121 unique bands.</li>
+				<li>Reduced package size by 50% thanks to HEIC conversion. Quality may have suffered a bit, but it's still acceptable.</li>
+				<li>Improved case/band selection performance.</li>
+				<li>Improved compatibility with HSWidgets (Date & Time).</li>
+				<li>If an Apple Watch case is being displayed, user interaction is only possible inside the simulated frame.</li>
+				<li>Removed "Beta" from the package name. And yes, that's worth a bullet point because that wasn't intentional.</li>
+			</ul>
+		</article>
+			
+		<article class="markdown-body">
 			<h2>Version 2.0f</h2>
-			<p><small>September 15 2020</small></p>
+			<p><small>September 15, 2020</small></p>
 			
 			<p>Here it is: the final version of LockWatch 2 – live and in color! After working on it for almost a whole year, LockWatch 2 is now officially leaving its beta phase. And even after reporting the "feature completeness" in the last beta, one additional feature made it to the final version: cases and bands! (Only Series 4 and Series 5 supported. Please send your complaints to Apple for not providing Series 3 assets)</p>
 			<p>This idea already existed while I was working on Onboarding in Beta 3, but I discarded it pretty quickly. Now it turned out (thanks to <a href="https://twitter.com/Yznco">@Yznco</a> on Twitter) that there are actually people who would like this feature. So, here it is. Apart from that, there's nothing new in this version. I've just removed a developer setting that was intended to be used in the beta phase.</p>
