Fixed broken band selection layout

--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,6 +29,15 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f-2</h2>
+			<p><small>28. September 2020</small></p>
+			
+			<ul>
+				<li>Behebt Layout-Probleme mit der Gehäuse-/Armband-Auswahl auf dem iPhone. (Danke an <a href="https://twitter.com/Yznco">@Yznco</a>!)</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0f-1</h2>
 			<p><small>28. September 2020</small></p>
 			
