--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,6 +29,15 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f-2</h2>
+			<p><small>September 28, 2020</small></p>
+			
+			<ul>
+				<li>Fixed broken case/band selection on iPhone. (Thank you, <a href="https://twitter.com/Yznco">@Yznco</a>!)</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0f-1</h2>
 			<p><small>September 28, 2020</small></p>
 			
